--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div id="menu">
 				<ul id="ul-style-menu">
 					<div class="border"></div>
-					<li><a class="link-style-menu option-select-menu" href="index.html">INICIO</a></li>
+					<li><a class="link-style-menu option-menu" href="index.html">INICIO</a></li>
 					<div class="border"></div>
 					<li>
 						<a class="link-style-menu option-select-menu" href="index.html">SERVICIOS</a>
